--- a/taller 2/2020-II_mcpp_taller_2.ipynb
+++ b/taller 2/2020-II_mcpp_taller_2.ipynb
@@ -99,17 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=2\n",
     "y= 5\n",
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,17 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=1\n",
     "y=1\n",
@@ -205,17 +189,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "z es 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x=4\n",
     "y=3\n",
@@ -258,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El codigo tendrá como output los numeros 2,4,6 y 8. El loop se correrá 10 veces. cada vez que i pase por el loop ira creciendo de a una unidad, pero la condicion para imprimir solo se cumplira cada dos loop (cuando i sea par), sin contar el loop inicial, por ende solo generará un output cuando este en un numero de repeticiones impar.\n",
+    "El codigo tendrá como output los numeros 2,4,6,8,10. El loop se correrá 10 veces. cada vez que i pase por el loop ira creciendo de a una unidad, pero la condicion para imprimir solo se cumplira cada dos loop (cuando i sea par), sin contar el loop inicial, por ende solo generará un output cuando este en un numero de repeticiones impar.\n",
     "\n",
     " "
    ]
@@ -318,19 +294,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ingrese un numero entero:4.79\n",
+      "ingrese un numero entero:4.5\n",
       "Error. El usuario debe ingresar un número entero.\n",
-      "ingrese un numero entero:2.4\n",
+      "ingrese un numero entero:3.2\n",
       "Error. El usuario debe ingresar un número entero.\n",
-      "ingrese un numero entero:6\n",
-      "6 es par\n"
+      "ingrese un numero entero:7.6\n",
+      "Error. El usuario debe ingresar un número entero.\n",
+      "ingrese un numero entero:4\n",
+      "4 es par\n"
      ]
     }
    ],
@@ -366,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -512,27 +490,19 @@
      "output_type": "stream",
      "text": [
       "Adivine el número\n",
-      "Adivine el número entre 1 y 100:46\n",
+      "Adivine el número entre 1 y 100:50\n",
       "Mayor\n",
-      "Adivine el número entre 1 y 100:57\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:23\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:10\n",
+      "Adivine el número entre 1 y 100:30\n",
       "Menor\n",
-      "Adivine el número entre 1 y 100:1\n",
+      "Adivine el número entre 1 y 100:32\n",
       "Menor\n",
-      "Adivine el número entre 1 y 100:11\n",
+      "Adivine el número entre 1 y 100:40\n",
       "Menor\n",
-      "Adivine el número entre 1 y 100:12\n",
+      "Adivine el número entre 1 y 100:45\n",
+      "Mayor\n",
+      "Adivine el número entre 1 y 100:42\n",
       "Menor\n",
-      "Adivine el número entre 1 y 100:20\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:17\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:15\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:14\n",
+      "Adivine el número entre 1 y 100:43\n",
       "¡Correcto!\n"
      ]
     }
@@ -549,7 +519,7 @@
     "        print(\"Mayor\")\n",
     "    else:\n",
     "        print(\"Menor\")\n",
-    "    num =  int(input(\"Adivine el número entre 1 y 100:\"))\n",
+    "    num = int(input(\"Adivine el número entre 1 y 100:\"))\n",
     "if num == ran:\n",
     "    print(\"¡Correcto!\")\n",
     "\n",
@@ -566,26 +536,10 @@
      "output_type": "stream",
      "text": [
       "Adivine el número\n",
-      "Adivine el número entre 1 y 100:78\n",
+      "Adivine el número entre 1 y 100:50\n",
       "Menor\n",
-      "Adivine el número entre 1 y 100:78\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:78\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:78\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:78\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:78\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:78\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:50\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:50\n",
-      "Mayor\n",
-      "Adivine el número entre 1 y 100:50\n",
-      "Menor\n"
+      "Adivine el nuevo número entre 1 y 100:50\n",
+      "Mayor\n"
      ]
     }
    ],
@@ -602,7 +556,7 @@
     "    else:\n",
     "        print(\"Menor\")\n",
     "    ran = random.randint(1, 100)\n",
-    "    num =  int(input(\"Adivine el número entre 1 y 100:\"))\n",
+    "    num =  int(input(\"Adivine el nuevo número entre 1 y 100:\"))\n",
     "    \n",
     "if num == ran:\n",
     "    print(\"¡Correcto!\")\n"
